--- a/G08.ipynb
+++ b/G08.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TAREA 2 : Grupo 8 (**Javier Muñoz de Torres y Alvaro Morán Lorente**)<br>\n"
+    "# TAREA 2 : Grupo 8 (**Javier Muñoz de Torres y Álvaro Morán Lorente**)<br>\n"
    ]
   },
   {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,8 +51,11 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.svm import LinearSVC\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import *\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "warnings.filterwarnings('ignore')\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import cross_validate"
    ]
   },
   {
@@ -64,20 +67,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 212 entries, 0 to 211\n",
+      "Data columns (total 22 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   age          212 non-null    float64\n",
+      " 1   sex          212 non-null    float64\n",
+      " 2   trestbps     212 non-null    float64\n",
+      " 3   chol         212 non-null    float64\n",
+      " 4   fbs          212 non-null    float64\n",
+      " 5   thalach      212 non-null    float64\n",
+      " 6   exang        212 non-null    float64\n",
+      " 7   oldpeak      212 non-null    float64\n",
+      " 8   ca           212 non-null    float64\n",
+      " 9   cp_1.0       212 non-null    float64\n",
+      " 10  cp_2.0       212 non-null    float64\n",
+      " 11  cp_3.0       212 non-null    float64\n",
+      " 12  cp_4.0       212 non-null    float64\n",
+      " 13  restecg_0.0  212 non-null    float64\n",
+      " 14  restecg_1.0  212 non-null    float64\n",
+      " 15  restecg_2.0  212 non-null    float64\n",
+      " 16  slope_1.0    212 non-null    float64\n",
+      " 17  slope_2.0    212 non-null    float64\n",
+      " 18  slope_3.0    212 non-null    float64\n",
+      " 19  thal_3.0     212 non-null    float64\n",
+      " 20  thal_6.0     212 non-null    float64\n",
+      " 21  thal_7.0     212 non-null    float64\n",
+      "dtypes: float64(22)\n",
+      "memory usage: 36.6 KB\n"
+     ]
+    }
+   ],
    "source": [
     "# Cargamos los dataframes preprocesados en la tarea 1\n",
     "X_Diseño_preprocesado = pd.read_pickle('X_Diseño_preprocesado.pkl')\n",
     "X_test_preprocesado = pd.read_pickle('X_test_preprocesado.pkl')\n",
     "Y_Diseño = pd.read_pickle('Y_Diseño.pkl')\n",
-    "Y_test = pd.read_pickle('Y_test.pkl')"
+    "Y_test = pd.read_pickle('Y_test.pkl')\n",
+    "X_Diseño_preprocesado.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>num</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>292</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>269</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>268</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>262</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>162</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>263</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>231</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>91 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     num\n",
+       "11     0\n",
+       "292    1\n",
+       "269    0\n",
+       "268    1\n",
+       "94     0\n",
+       "..   ...\n",
+       "262    0\n",
+       "7      0\n",
+       "162    0\n",
+       "263    0\n",
+       "231    1\n",
+       "\n",
+       "[91 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +391,7 @@
        "21  0.527091     thal_7.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +644,7 @@
        "thal_7.0           0.683204         0.527091    0.156112"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -590,13 +735,9 @@
     "\n",
     "# SVM \n",
     "svm_lineal_predict = svm_lineal.predict(X_test_preprocesado)\n",
-    "dif = modelo_RL_predict - svm_lineal_predict\n",
-    "count = 0\n",
-    "for d in dif:\n",
-    "    if d != 0:\n",
-    "        count += 1\n",
-    "print(f\"Numero predicciones distintas: {count}\")\n",
-    "print(f\"Numero de observaciones: {X_test_preprocesado.shape[0]}\")\n"
+    "dif = (modelo_RL_predict!=svm_lineal_predict).sum()\n",
+    "print(f\"Numero predicciones distintas: {dif}\")\n",
+    "print(f\"Numero de observaciones: {X_test_preprocesado.shape[0]}\")"
    ]
   },
   {
@@ -605,6 +746,252 @@
    "source": [
     "Ambos modelos han predecido tan solo una observación distinta de 91 que hay en el conjunto de test, es decir, que sus prestaciones serán practicamente idénticas. Ahora, comparemos directamente con las figuras de mérito."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Obtenemos las figuras de merito\n",
+    "f1_lineal = f1_score(Y_test,svm_lineal_predict)\n",
+    "acc_lineal = accuracy_score(Y_test,svm_lineal_predict)\n",
+    "prec_lineal = precision_score(Y_test,svm_lineal_predict)\n",
+    "recall_lineal = recall_score(Y_test,svm_lineal_predict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RegresionLogistica_reg</th>\n",
+       "      <th>SVM Lineal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Accuracy</th>\n",
+       "      <td>0.846154</td>\n",
+       "      <td>0.835165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>F1_score</th>\n",
+       "      <td>0.815789</td>\n",
+       "      <td>0.805195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Precisión</th>\n",
+       "      <td>0.861111</td>\n",
+       "      <td>0.837838</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Recall</th>\n",
+       "      <td>0.775000</td>\n",
+       "      <td>0.775000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           RegresionLogistica_reg  SVM Lineal\n",
+       "Accuracy                 0.846154    0.835165\n",
+       "F1_score                 0.815789    0.805195\n",
+       "Precisión                0.861111    0.837838\n",
+       "Recall                   0.775000    0.775000"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "figuras_regresion_log = {\n",
+    "'RegresionLogistica_reg':     [0.846154,\t0.815789,\t0.861111,\t0.775],\n",
+    "'SVM Lineal': [acc_lineal,f1_lineal,prec_lineal,recall_lineal]\n",
+    "}\n",
+    "tabla_regresion_log = pd.DataFrame(figuras_regresion_log, index=['Accuracy', 'F1_score', 'Precisión', 'Recall'])\n",
+    "tabla_regresion_log"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tras calcular las figuras de mérito observamos que ambos modelos presentan unos resultados similares. Esto tiene sentido si tenemos en cuenta que ambos modelos le dan importancia en la predicción  a las mismas variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sección II. Esquema no lineal "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora vamos a entrenar un SVM no lineal utilizado distintos tipos de kernel sin ajustar sus hiperparámetros."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creamos el conjunto de train y validacion\n",
+    "X_train,X_val,Y_train ,Y_val= train_test_split(X_Diseño_preprocesado,Y_Diseño,random_state=314)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creamos los diferentes modelos con distintos kernel\n",
+    "kernels = ['linear', 'poly', 'rbf','sigmoid']\n",
+    "figuras_merito = {}\n",
+    "\n",
+    "for kernel in kernels:\n",
+    "    #Creamos el modelo y predecimos\n",
+    "    svm_no_lineal = SVC(kernel = kernel,random_state=314)\n",
+    "    svm_no_lineal.fit(X_train,Y_train)\n",
+    "    prediccion = svm_no_lineal.predict(X_val)\n",
+    "    #Hallamos las figuras de meéito\n",
+    "    f1_kernel = f1_score(Y_val, prediccion)\n",
+    "    acc_kernel = accuracy_score(Y_val, prediccion)\n",
+    "    prec_kernel = precision_score(Y_val, prediccion)\n",
+    "    recall_kernel = recall_score(Y_val, prediccion)\n",
+    "    #Las guardamos en un diccionario\n",
+    "    figuras_merito[kernel] = {}\n",
+    "    figuras_merito[kernel]['f1_score'] = f1_kernel\n",
+    "    figuras_merito[kernel]['accuracy'] = acc_kernel\n",
+    "    figuras_merito[kernel]['precision'] = prec_kernel\n",
+    "    figuras_merito[kernel]['recall'] = recall_kernel    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>linear</th>\n",
+       "      <th>poly</th>\n",
+       "      <th>rbf</th>\n",
+       "      <th>sigmoid</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>f1_score</th>\n",
+       "      <td>0.809524</td>\n",
+       "      <td>0.800000</td>\n",
+       "      <td>0.844444</td>\n",
+       "      <td>0.818182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>accuracy</th>\n",
+       "      <td>0.849057</td>\n",
+       "      <td>0.849057</td>\n",
+       "      <td>0.867925</td>\n",
+       "      <td>0.849057</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>precision</th>\n",
+       "      <td>0.850000</td>\n",
+       "      <td>0.888889</td>\n",
+       "      <td>0.826087</td>\n",
+       "      <td>0.818182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>recall</th>\n",
+       "      <td>0.772727</td>\n",
+       "      <td>0.727273</td>\n",
+       "      <td>0.863636</td>\n",
+       "      <td>0.818182</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             linear      poly       rbf   sigmoid\n",
+       "f1_score   0.809524  0.800000  0.844444  0.818182\n",
+       "accuracy   0.849057  0.849057  0.867925  0.849057\n",
+       "precision  0.850000  0.888889  0.826087  0.818182\n",
+       "recall     0.772727  0.727273  0.863636  0.818182"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_figuras = pd.DataFrame(figuras_merito)\n",
+    "df_figuras"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Utilizando los kernel no lineales observamos mejores resultados en todos ellos en comparación al kernel lineal. El kernel que produce mejores resultados es la **rbf**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
