Comienzo busqueda hiperparam

--- a/G08.ipynb
+++ b/G08.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,8 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.model_selection import cross_validate"
+    "from sklearn.model_selection import cross_validate\n",
+    "from sklearn.model_selection import GridSearchCV"
    ]
   },
   {
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +212,7 @@
        "[91 rows x 1 columns]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +392,7 @@
        "21  0.527091     thal_7.0"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +645,7 @@
        "thal_7.0           0.683204         0.527091    0.156112"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +824,7 @@
        "Recall                   0.775000    0.775000"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +970,7 @@
        "recall     0.772727  0.727273  0.863636  0.818182"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,7 +984,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Utilizando los kernel no lineales observamos mejores resultados en todos ellos en comparación al kernel lineal. El kernel que produce mejores resultados es la **rbf**."
+    "Utilizando los kernel no lineales observamos mejores resultados en todos ellos en comparación al kernel lineal. El kernel que produce mejores resultados es la **rbf**.   \n",
+    "Ahora vamos a ver como varía el *recall* en función de los hiperparámetros de los *kernel*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Busqueda de hiperparmáetros\n",
+    "hiperparametros = {'degree': range(0,10),'gamma': ['scale','auto'],'coef0':range(-10,10)}\n",
+    "resultados = {}\n",
+    "for kernel in kernels:\n",
+    "    SVM_cv = GridSearchCV(SVC(kernel = kernel,random_state=314),param_grid=hiperparametros,cv  = 10,scoring='recall',return_train_score= True)\n",
+    "    SVM_cv.fit(X_Diseño_preprocesado,Y_Diseño)\n",
+    "    resultados[kernel] = SVM_cv.cv_results_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Obtenemos los resultados de cada kernel\n",
+    "linear = pd.DataFrame(resultados['linear'])\n",
+    "poly = pd.DataFrame(resultados['poly'])\n",
+    "rbf = pd.DataFrame(resultados['rbf'])\n",
+    "sigmoid = pd.DataFrame(resultados['sigmoid'])\n",
+    "\n",
+    "linear_scale = linear.loc[linear['param_gamma'] == 'scale']\n"
    ]
   },
   {
