--- a/G08.ipynb
+++ b/G08.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,9 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from mlxtend.feature_selection import SequentialFeatureSelector as SFS\n",
+    "from mlxtend.plotting import plot_sequential_feature_selection as plot_sfs"
    ]
   },
   {
@@ -79,7 +81,8 @@
     "X_Diseño_preprocesado = pd.read_pickle('X_Diseño_preprocesado.pkl')\n",
     "X_test_preprocesado = pd.read_pickle('X_test_preprocesado.pkl')\n",
     "Y_Diseño = pd.read_pickle('Y_Diseño.pkl')\n",
-    "Y_test = pd.read_pickle('Y_test.pkl')"
+    "Y_test = pd.read_pickle('Y_test.pkl')\n",
+    "X_Diseño_preprocesado.info()"
    ]
   },
   {
@@ -237,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,13 +357,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "hp_linear = {'C': np.linspace(0.01,40,20)}\n",
-    "hp_rbf = {'C': np.linspace(0,10,11),'gamma': np.linspace(0.005,0.3,14)}\n",
-    "hp_poly = {'C': np.linspace(0.01,30,10),'degree': [2,3,4],'gamma':  np.linspace(0.005,0.3,14)}\n",
+    "hp_rbf = {'C': np.linspace(0,10,11),'gamma': np.linspace(0.001,0.1,11)}\n",
+    "hp_poly = {'C': np.linspace(0.01,10,10),'degree': [2,3,4],'gamma':  np.linspace(0.001,0.1,11)}\n",
     "hp_sigmoid = {'C': np.linspace(0.01,30,10),'gamma': np.linspace(0.001,0.1,10)}\n",
     "hiperparametros_kernels = []\n",
     "hiperparametros_kernels.append(hp_linear)\n",
@@ -382,19 +385,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Busqueda de hiperparmáetros\n",
+    "'''# Busqueda de hiperparmáetros\n",
     "resultados = {}\n",
     "bestParams = {}\n",
-    "bestScores = {}\n",
     "i = 0\n",
     "while i < len(hiperparametros_kernels):\n",
-    "    SVM_cv = GridSearchCV(SVC(kernel=kernels[i],random_state=314),param_grid=hiperparametros_kernels[i],cv=4,scoring='recall',return_train_score=True)\n",
+    "    SVM_cv = GridSearchCV(SVC(kernel=kernels[i],random_state=314),param_grid=hiperparametros_kernels[i],cv=10,scoring='recall',return_train_score=True)\n",
     "    SVM_cv.fit(X_Diseño_preprocesado,Y_Diseño)\n",
     "    resultados[kernels[i]] = SVM_cv.cv_results_\n",
     "    bestParams[kernels[i]] = SVM_cv.best_params_\n",
-    "    bestScores[kernels[i]] = SVM_cv.best_score_\n",
     "    print(f\"Finished {kernels[i]}.\")\n",
-    "    i += 1\n"
+    "    i += 1'''\n"
    ]
   },
   {
@@ -417,7 +418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "'''import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Datos\n",
@@ -429,7 +430,7 @@
     "plt.figure(figsize=(14, 6))\n",
     "\n",
     "# Plot para el recall de test\n",
-    "plt.plot(C_params, recall_scores_test, color='red', linestyle='-', linewidth=2, label='Recall (Validation)', marker='o', markersize=6)\n",
+    "plt.plot(C_params, recall_scores_test, color='red', linestyle='-', linewidth=2, label='Recall (Test)', marker='o', markersize=6)\n",
     "\n",
     "# Plot para el recall de train\n",
     "plt.plot(C_params, recall_scores_train, color='blue', linestyle='--', linewidth=2, label='Recall (Train)', marker='s', markersize=6)\n",
@@ -437,7 +438,7 @@
     "# Agregar etiquetas y título\n",
     "plt.xlabel('C', fontsize=14)\n",
     "plt.ylabel('Recall', fontsize=14)\n",
-    "plt.title('Recall en Train y Validation', fontsize=16)\n",
+    "plt.title('Recall en Train y Test', fontsize=16)\n",
     "plt.legend()\n",
     "\n",
     "# Mejorar la apariencia\n",
@@ -447,14 +448,15 @@
     "plt.yticks(fontsize=12)\n",
     "\n",
     "# Mostrar la gráfica\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "'''"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se puede apreciar que el modelo a partir de un C = 9, C = 11 el modelo ya estabiliza y no consigue mayores resultados, y como un mayor valor de C tiende a sobreajustar nos quedaremos con C = 11."
+    "Se puede apreciar que el modelo a partir de un C = 19, C = 21 el modelo ya estabiliza y no consigue mayores resultados, y como un mayor valor de C tiende a sobreajustar nos quedaremos con C = 21."
    ]
   },
   {
@@ -477,7 +479,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "'''import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "\n",
@@ -517,13 +519,14 @@
     "ax.set_xlabel('C')\n",
     "ax.set_ylabel('Gamma')\n",
     "ax.set_zlabel('Recall')\n",
-    "ax.set_title('Recall en validation')\n",
+    "ax.set_title('Variación del Recall en función de C y Gamma (Kernel RBF)')\n",
     "\n",
     "# Barra de colores para el score\n",
     "fig.colorbar(surf, ax=ax, shrink=0.5, aspect=5)\n",
     "\n",
     "# Mostrar el gráfico\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "'''"
    ]
   },
   {
@@ -532,7 +535,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extraer resultados del GridSearchCV\n",
+    "'''# Extraer resultados del GridSearchCV\n",
     "kernel_rbf_results = resultados['rbf'] \n",
     "\n",
     "# Extraer los valores de C, gamma y el score\n",
@@ -552,10 +555,10 @@
     "\n",
     "plt.figure(figsize=(10, 7))\n",
     "sns.heatmap(pivot_table, annot=True, cmap='coolwarm', fmt=\".3f\", cbar_kws={'label': 'Recall'})\n",
-    "plt.title('Recall en validation')\n",
+    "plt.title('Heatmap del Recall en función de C y Gamma (Kernel RBF) para el conjunto de Validación')\n",
     "plt.xlabel('C')\n",
     "plt.ylabel('Gamma')\n",
-    "plt.show()"
+    "plt.show()'''"
    ]
   },
   {
@@ -573,7 +576,7 @@
     "\n",
     "# Etiquetas\n",
     "fig.update_layout(\n",
-    "    title='Recall en validation',\n",
+    "    title='Recall en función de C y Gamma',\n",
     "    scene=dict(\n",
     "        xaxis_title='C',\n",
     "        yaxis_title='Gamma',\n",
@@ -601,7 +604,7 @@
     "})\n",
     "\n",
     "# Gráfico Scatter 3D interactivo\n",
-    "fig = px.scatter_3d(df_plotly, x='C', y='Gamma', z='Recall', color='Recall', title='Recall en validation', color_continuous_scale='Jet')\n",
+    "fig = px.scatter_3d(df_plotly, x='C', y='Gamma', z='Recall', color='Recall', title='Recall en función de C y Gamma', color_continuous_scale='Jet')\n",
     "fig.show()"
    ]
   },
@@ -609,7 +612,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tras todas estas gráficas, vemos que ha una zona específica donde se obtienen los mayores valores de recall (por hacer una analogía, es una especie de \"meseta\"). A priori no hay preferencia en cuanto a que punto seleccionar, por lo que tomaremos uno relativamente central, contretamente el *C* = **4** y *gamma* = **0.021**, con un recall en validation de 0.85."
+    "Tras todas estas gráficas, vemos que ha una zona específica donde se obtienen los mayores valores de recall (por hacer una analogía, es una especie de \"meseta\"). A priori no hay preferencia en cuanto a que punto seleccionar, por lo que tomaremos uno relativamente central, contretamente el *C* = **6** y *gamma* = **0.02**."
    ]
   },
   {
@@ -632,18 +635,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list(bestParams['poly'].keys())\n",
-    "for p in list(bestParams['poly'].keys()):\n",
-    "    print(p,\"->\",bestParams['poly'][p])\n",
-    "\n",
-    "print(\"Recall validation ->\",bestScores['poly'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Obtenemos como mejores hiperparametros son *C* = **3.34**, *degree* = **3** y *gamma* = **0.016** con un recall de 0.838 en validation. "
+    "bestParams['poly']"
    ]
   },
   {
@@ -658,61 +650,6 @@
    "metadata": {},
    "source": [
     "Ahora vamos a representar los resultados utilizando como *kernel* la **SIGMOID**."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
-    "\n",
-    "# Extraer los resultados del GridSearchCV para el kernel RBF\n",
-    "kernel_sigmoid_results = resultados['sigmoid']  # Ajusta si la clave en tu diccionario es diferente\n",
-    "\n",
-    "# Extraer los valores de los hiperparámetros y el score\n",
-    "C_values = kernel_sigmoid_results['param_C'].data  # Valores de C\n",
-    "gamma_values = kernel_sigmoid_results['param_gamma'].data  # Valores de gamma\n",
-    "recall_scores = kernel_sigmoid_results['mean_test_score']  # Recall medio\n",
-    "\n",
-    "# Asegurarse de convertir todo a arrays NumPy para trabajar más fácilmente\n",
-    "C_values = np.array(C_values, dtype=float)\n",
-    "gamma_values = np.array(gamma_values, dtype=float)\n",
-    "recall_scores = np.array(recall_scores, dtype=float)\n",
-    "\n",
-    "# Crear una malla de C y gamma para el gráfico 3D\n",
-    "C_unique = np.unique(C_values)\n",
-    "gamma_unique = np.unique(gamma_values)\n",
-    "\n",
-    "# Reorganizar el score (recall) en formato de malla\n",
-    "C_grid, gamma_grid = np.meshgrid(C_unique, gamma_unique)\n",
-    "\n",
-    "# Reshape del score para que coincida con la malla\n",
-    "recall_grid = recall_scores.reshape(len(gamma_unique), len(C_unique))\n",
-    "\n",
-    "# Crear el gráfico 3D\n",
-    "fig = plt.figure(figsize=(30, 8))\n",
-    "ax = fig.add_subplot(111, projection='3d')\n",
-    "\n",
-    "# Dibujar la superficie\n",
-    "surf = ax.plot_surface(C_grid, gamma_grid, recall_grid, cmap='crest', edgecolor='k')\n",
-    "\n",
-    "ax.view_init(elev=30, azim=45)  # PARA ROTAR!!!\n",
-    "\n",
-    "# Etiquetas de los ejes\n",
-    "ax.set_xlabel('C')\n",
-    "ax.set_ylabel('Gamma')\n",
-    "ax.set_zlabel('Recall')\n",
-    "ax.set_title('Recall en validation')\n",
-    "\n",
-    "# Barra de colores para el score\n",
-    "fig.colorbar(surf, ax=ax, shrink=0.5, aspect=5)\n",
-    "\n",
-    "# Mostrar el gráfico\n",
-    "plt.show()"
    ]
   },
   {
@@ -736,6 +673,7 @@
     "    'Recall': recall_scores\n",
     "})\n",
     "\n",
+    "SVM_model = kernel_sigmoid_results[]\n",
     "# Crear una tabla pivotante para el heatmap\n",
     "pivot_table = df.pivot_table(index='Gamma', columns='C', values='Recall')\n",
     "\n",
@@ -781,23 +719,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para el kernel *sigmoid* hemos obtenido como mejores hiperparámetros *C* = **20** y *gamma* = **0.5** con un recall de 0.848 en validation."
+    "## Método Wrapper"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Arquitectura seleccionada"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "El mejor kernel que hemos obtenido ha sido el **RBF** con un recall de 0.85, con los parametros *C* = **4** y *gamma* = **0.21**.\n",
-    "\n",
-    "Tras esto, vamos a testear el modelo con el conjunto de test para 4 figuras de mérito:"
+    "Ahora vamos a utilizar el metodo wrapper mediante forward selection para encontrar las características más relevantes e intentar reducir la dimensionalidad de nuestra tarea."
    ]
   },
   {
@@ -806,32 +735,89 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creamos y entrenamos el modelo\n",
-    "svm_rbf = SVC(kernel = 'rbf', C = 4, gamma = 0.21, random_state=314)\n",
-    "svm_rbf.fit(X_Diseño_preprocesado, Y_Diseño)\n",
+    "from mlxtend.feature_selection import SequentialFeatureSelector as SFS\n",
+    "from mlxtend.plotting import plot_sequential_feature_selection as plot_sfs\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Prediccion\n",
-    "svm_rbf_predict = svm_rbf.predict(X_test_preprocesado)\n",
+    "# Definir el mejor modelo SVM\n",
+    "best_svm = SVC(kernel='rbf', random_state=314, C=4, gamma=0.21)\n",
     "\n",
-    "#Obtenemos las figuras de merito\n",
-    "f1_svmRBF = f1_score(Y_test,svm_rbf_predict)\n",
-    "acc_svmRBF = accuracy_score(Y_test,svm_rbf_predict)\n",
-    "prec_svmRBF = precision_score(Y_test,svm_rbf_predict)\n",
-    "recall_svmRBF = recall_score(Y_test,svm_rbf_predict)\n",
+    "# Configurar Sequential Feature Selection (Forward Selection)\n",
+    "sfs_fw = SFS(best_svm, \n",
+    "             k_features=(1, 22),  # Selección de entre 1 y 22 características\n",
+    "             forward=True,        # Forward Selection\n",
+    "             floating=False,      # Sin floating\n",
+    "             scoring='recall',    # Métrica de evaluación\n",
+    "             cv=4)                # Validación cruzada con 4 particiones\n",
     "\n",
-    "print(f'F1-score : {f1_svmRBF}')\n",
-    "print(f'Accuracy : {acc_svmRBF}')\n",
-    "print(f'Precision : {prec_svmRBF}')\n",
-    "print(f'Recall : {recall_svmRBF}')\n",
+    "# Ajustar el selector al conjunto de datos\n",
+    "sfs_fw = sfs_fw.fit(X_Diseño_preprocesado, Y_Diseño)\n",
+    "\n",
+    "# Representar los resultados\n",
+    "fig1 = plot_sfs(sfs_fw.get_metric_dict(), kind='std_dev')\n",
+    "\n",
+    "plt.title('Sequential Forward Selection (w. StdDev), SVM')\n",
+    "plt.grid()\n",
+    "plt.show()\n",
+    "\n",
+    "# Convertir los resultados a un DataFrame\n",
+    "forward_selection = pd.DataFrame.from_dict(sfs_fw.get_metric_dict()).T\n",
+    "\n",
+    "# Seleccionar el mejor subconjunto de características\n",
+    "\n",
+    "mejor_indice = forward_selection['avg_score'].idxmax()\n",
+    "SVM_features = list(forward_selection.loc[mejor_indice, 'feature_names'])\n",
+    "\n",
+    "# Mostrar las características seleccionadas\n",
+    "print(f'Las variables seleccionadas son: {SVM_features}')\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Crear un nuevo DataFrame con las características seleccionadas\n",
+    "X_diseno_wrapped = X_Diseño_preprocesado[['cp_2.0']]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_svm.fit(X_diseno_wrapped,Y_Diseño)\n",
+    "Y_wrapper = best_svm.predict(X_test_preprocesado[['cp_2.0']])\n",
+    "recall_wrapper = recall_score(Y_test,Y_wrapper)\n",
+    "print(f'Recall: {recall_wrapper} Accuracy{accuracy_score(Y_test,Y_wrapper)} Precision{precision_score(Y_test,Y_wrapper)} F1_score{f1_score(Y_test,Y_wrapper)}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.countplot(data = X_diseno_wrapped,x = 'cp_2.0',hue=Y_Diseño['num'])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A la hora de evaluar el modelo, hemos obtenido unos resultado bastante inferiores a los obtenidos en la Tarea 1, parece que este modelo no nos va a servir del todo."
+    "Observamos que al solo usar una característica obtenemos un recall de 0.9 pero todas las demás figuras de mérito tienen valores muy bajos, por lo que descartamos este modelo."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -850,7 +836,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
